# rusty-pcb

./: Cargo.toml  build.rs  readme.md
pcb_test/pcb_complex/: Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_TopLayer.GTL
pcb_test/pcb_simple/: Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_TopLayer.GTL  Gerber_TopLayer_loop.GTL  Gerber_TopLayer_test.GTL  Gerber_TopLayer_test2.GTL
pcb_test/pcb_simple_2/: pcb simple-B_Cu.gbr  pcb simple-Edge_Cuts.gbr  pcb simple-NPTH.drl  pcb simple-PTH.drl
pcb_test/pcb_simple_2/percage/excellon/: pcb simple-NPTH.drl  pcb simple-PTH.drl
pcb_test/pcb_simple_2/percage/gerber_x2/: pcb simple-NPTH-drl.gbr  pcb simple-PTH-drl.gbr
src/: app_logger.rs  base_window.rs  main.rs
src/layer/: layer.rs  mod.rs  vec2.rs
src/ui/: app_menu_bar.rs  file_picker.rs  gerber_canvas.rs  log_console.rs  main_window.rs  message.rs  mod.rs  tab_bar.rs
src/ui/tabs/: drilling.rs  files.rs  milling.rs
src/ui/widgets/: file_picker.rs  mod.rs
src/ui/widgets/main_window/: app_menu_bar.rs  gerber_canvas.rs  log_console.rs  mod.rs  tab_bar.rs
src/ui/widgets/main_window/tabs/: drilling.rs  files.rs  milling.rs  mod.rs
